# Vapor-Identity-Server

./: AGENTS.md  Cargo.toml  README.md
src/: admin_handlers.rs  api_handlers.rs  auth_attempts.rs  browser_handlers.rs  config.rs  db.rs  main.rs  persistence.rs  profiles.rs  provider_handlers.rs  providers.rs  session_handlers.rs  status_handlers.rs  types.rs  util.rs
