[package]
name = "vapor_identity_server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
